Added kafka and cleaned up code